# cuda_p2p

./: CMakeLists.txt  README.md
include/: helper.h  macro.h  multi_gpu.h
src/: helper.cpp  main.cpp  multi_gpu.cu
